--- a/index.html
+++ b/index.html
@@ -139,22 +139,22 @@
 				      		<div>
 				      			<h3>web前端工程师简历（2015年版）</h3>
 				      			<p>本简历初版，上线一个月后，百度关键词“web前端工程师简历”排名前三，点击量数百万，深受广大前端初学者的好评及模仿，至今搜该关键词百度前10页都处处能见该简历的仿版。</p>
-				      			<a href="#"></a>
+				      			<a href="./html/detail.html"></a>
 				      		</div>
 				      		<div>
 				      			<h3>web前端工程师简历（2015年版）</h3>
 				      			<p>本简历初版，上线一个月后，百度关键词“web前端工程师简历”排名前三，点击量数百万，深受广大前端初学者的好评及模仿，至今搜该关键词百度前10页都处处能见该简历的仿版。</p>
-				      			<a href="#"></a>
+				      			<a href="./html/mime.html"></a>
 				      		</div>
 				      		<div>
 				      			<h3>web前端工程师简历（2015年版）</h3>
 				      			<p>本简历初版，上线一个月后，百度关键词“web前端工程师简历”排名前三，点击量数百万，深受广大前端初学者的好评及模仿，至今搜该关键词百度前10页都处处能见该简历的仿版。</p>
-				      			<a href="#"></a>
+				      			<a href="./html/more.html"></a>
 				      		</div>
 				      		<div>
 				      			<h3>web前端工程师简历（2015年版）</h3>
 				      			<p>本简历初版，上线一个月后，百度关键词“web前端工程师简历”排名前三，点击量数百万，深受广大前端初学者的好评及模仿，至今搜该关键词百度前10页都处处能见该简历的仿版。</p>
-				      			<a href="#"></a>
+				      			<a href="./html/settings.html"></a>
 				      		</div>
 				      	</div>
 				      	<h2>github上面查看更多</h2>
